--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
 							<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
-								aria-controls="home" aria-selected="true">All <span>/</span></a>
+								aria-controls="home" aria-selected="true">View All <span>/</span></a>
 						</li>
 
 						<li class="nav-item">
@@ -306,6 +306,34 @@
 				</div>
 			</div>
 		</div>
+
+		
+
+		<div class="codebox mr-rl col-lg-8 col-sm-12">
+			<textarea disabled="true">
+<!-- language logo start -->
+<section class="language mr-rl" id="feature">
+	<div class="row">
+		<div class="col-md-12 col-sm-6">
+			<div class="client-area">
+				<div class="client-logo-area slider">
+					<div class="slide"><img src="./Images/icon/languages/html.png"></div>
+					<div class="slide"><img src="./Images/icon/languages/bootstrap.png"></div>
+					<div class="slide"><img src="./Images/icon/languages/css.png"></div>
+					<div class="slide"><img src="./Images/icon/languages/javascript.png"></div>
+					<div class="slide"><img src="./Images/icon/languages/php.png"></div>
+					<div class="slide"><img src="./Images/icon/languages/elementor.png"></div>
+					<div class="slide"><img src="./Images/icon/languages/jquery.png"></div>
+					<div class="slide"><img src="./Images/icon/languages/react.js.png"></div>
+					<div class="slide"><img src="./Images/icon/languages/wordpress.png"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<!-- language logo end -->
+			</textarea>
+		  </div>
 
 
 		<!-- language logo start -->
